--- a/UI/src/app/modules/validation-reference/components/validation-reference/validation-reference.component.html
+++ b/UI/src/app/modules/validation-reference/components/validation-reference/validation-reference.component.html
@@ -1,10 +1,10 @@
 <div class="p-grid  p-align-center p-pt-2">
   <div class="p-col">
-    <span class="p-float-label p-mb-4 p-mt-3">
+    <span class="p-float-label p-mb-4 p-mt-3" *ngIf="selectionModel$|async">
     <p-dropdown id="datasetSelector"
-                (onChange)="onDatasetChange($event)"
+                (onChange)="onDatasetChange()"
                 [options]="verifyOptions()|async"
-                [ngModel]="verifyChosenValue()|async"
+                [ngModel]="selectionModel$|async"
                 (ngModelChange)="selectionModel$.next($event)"
                 optionLabel="datasetModel.selectedDataset.pretty_name"
                 [style]="{'width': '100%'}">
@@ -13,13 +13,13 @@
              (mouseleave)="onHoverOverDataset(item, false)"
              (mouseup)="onHoverOverDataset(item, false)">
           <span>
-            {{item.datasetModel.selectedDataset.pretty_name}} ({{item.datasetModel.selectedVersion?.pretty_name}})
+            {{item.datasetModel.selectedDataset?.pretty_name}} ({{item.datasetModel.selectedVersion?.pretty_name}})
           </span>
         </div>
       </ng-template>
       <ng-template let-item pTemplate="selectedItem">
         <div>
-          <span>{{item.datasetModel.selectedDataset.pretty_name}} ({{item.datasetModel.selectedVersion?.pretty_name}})</span>
+          <span>{{item.datasetModel.selectedDataset?.pretty_name}} ({{item.datasetModel.selectedVersion?.pretty_name}})</span>
         </div>
 
       </ng-template>
