--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -22,10 +22,10 @@
             <p-accordionTab *ngFor="let item of validationModel.datasetConfigurations; let datasetIdx = index"
                             [header]="(item.datasetModel.selectedDataset?.pretty_name)+' / ' +
                              ''+(item.datasetModel.selectedVersion?.pretty_name)+' / '+(item.datasetModel.selectedVariable?.short_name)
-                             + (getInformationOnTheReference((item.spatialReference|async), (item.temporalReference|async), (item.scalingReference|async)))"
+                             + (getInformationOnTheReference((item.spatialReference$|async), (item.temporalReference$|async), (item.scalingReference$|async)))"
                             [selected]="datasetIdx == validationModel.datasetConfigurations.length - 1"
-                            [class]="{'highlighted': (item.highlighted|async),
-                            'is-reference': ((item.spatialReference|async) || (item.temporalReference|async) || (item.scalingReference|async))}">
+                            [class]="{'highlighted': (item.highlighted$|async),
+                            'is-reference': ((item.spatialReference$|async) || (item.temporalReference$|async) || (item.scalingReference$|async))}">
 
               <qa-dataset *ngIf="validationModel.datasetConfigurations[datasetIdx].datasetModel.selectedDataset"
                           [selectionModel]="validationModel.datasetConfigurations[datasetIdx].datasetModel"
@@ -108,8 +108,9 @@
             <label for="spatial-reference" class="p-mb-4">Spatial reference:</label>
             <qa-validation-reference
               id="spatial-reference"
+              #spatialReference
               [validationModel]="validationModel"
-              [referenceType]="'spatialReference'"
+              [referenceType]="'spatialReference$'"
               (hoverOverDataset)="onHoverOverReferenceDataset($event)"></qa-validation-reference>
           </div>
 
@@ -118,8 +119,9 @@
             <label for="temporal-reference" class="p-mb-4">Temporal reference:</label>
             <qa-validation-reference
               id="temporal-reference"
+              #temporalReference
               [validationModel]="validationModel"
-              [referenceType]="'temporalReference'"
+              [referenceType]="'temporalReference$'"
               (hoverOverDataset)="onHoverOverReferenceDataset($event)"></qa-validation-reference>
           </div>
 
