--- a/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
+++ b/UI/src/app/modules/validation-result/components/summary-statistics/summary-statistics.component.html
@@ -19,7 +19,7 @@
             </ng-template>
             <ng-template #showTable>
               <div class="p-pb-3">The mean, median and standard deviation are calculated on the validation results aggregated by metric
-                and dataset. The reference dataset used is {{ (refDataset$ | async)?.pretty_name }}
+                and dataset. The spatial reference dataset used is {{ (refDataset$ | async)?.pretty_name }}
                 ({{ (refDatasetVersion$ | async)?.short_name }}, {{ (refDatasetVariable$ | async)?.pretty_name }}).
               </div>
               <span [innerHtml]="table | dompurify"></span>
