--- a/UI/src/app/pages/dataset-info/dataset-info.component.html
+++ b/UI/src/app/pages/dataset-info/dataset-info.component.html
@@ -1,22 +1,11 @@
 <main *ngIf="datasetInfo$ | async as datasets">
-  <div *ngFor="let refFlag of [false, true]">
-
-    <div *ngIf="!refFlag; else elseRefFlag">
+    <div>
       <h1 class="h3 mb-3 font-weight-normal">Datasets - Data to be validated and to be used as a reference</h1>
       <p>
         The following datasets can be validated within the QA4SM tool. These datasets are available in both the "data"
         and the 'reference' sections and of the validate page.
       </p>
     </div>
-
-    <ng-template #elseRefFlag>
-      <h1 id="ref" class="h3 mb-3 font-weight-normal">Datasets - Reference Data</h1>
-      <p>
-        The following datasets can be used only as a reference within the QA4SM tool. These datasets are available in
-        the
-        "reference" section of the validate page.
-      </p>
-    </ng-template>
 
     <table class="table table-bordered table-striped">
       <thead class="thead-dark">
@@ -31,10 +20,10 @@
       </thead>
       <tbody>
       <tr *ngFor="let dataset of datasets">
-        <th *ngIf="dataset.is_spatial_reference == refFlag" scope="row">{{ dataset.pretty_name }}
+        <th scope="row">{{ dataset.pretty_name }}
           <sup *ngIf="dataset.not_as_reference">*</sup></th>
-        <td *ngIf="dataset.is_spatial_reference == refFlag" [innerHTML]="dataset.detailed_description"></td>
-        <td *ngIf="dataset.is_spatial_reference == refFlag">
+        <td [innerHTML]="dataset.detailed_description"></td>
+        <td>
           <ul class="p-pl-0 p-my-0">
             <li *ngFor="let version of dataset.versions; let ind=index" class="p-ml-2">
               <b> {{ version }}</b> <br>
@@ -51,9 +40,9 @@
             </li>
           </ul>
         </td>
-        <td *ngIf="dataset.is_spatial_reference == refFlag" [innerHTML]="dataset.source_reference"></td>
-        <td *ngIf="dataset.is_spatial_reference == refFlag" [innerHTML]="dataset.citation"></td>
-        <td *ngIf="dataset.is_spatial_reference == refFlag">
+        <td [innerHTML]="dataset.source_reference"></td>
+        <td [innerHTML]="dataset.citation"></td>
+        <td>
           <ul class="p-pl-0  p-my-0">
             <li *ngFor="let filter of dataset.filters; let ind = index" class="p-ml-2">
               {{filter}}: {{dataset.filtersHelpText[ind]}}
@@ -63,8 +52,7 @@
       </tr>
       </tbody>
     </table>
-    <span *ngIf="!refFlag"><sup>*</sup> dataset temporarily excluded from the reference list for technical reasons<br> </span>
+    <span><sup>*</sup> dataset temporarily excluded from the reference list for technical reasons<br> </span>
     <br>
-  </div>
   <qa-scroll-to-top></qa-scroll-to-top>
 </main>
