--- a/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-summary/validation-summary.component.html
@@ -68,25 +68,29 @@
           Validation copied on {{ validationRun.start_time | date: dateFormat :timeZone }} {{timeZone}},
           original validation run on {{this.originalDate| date: 'mediumDate' :timeZone }}.
         </li>
-        <li *ngIf="!validationRun.is_a_copy">Started validation on {{ validationRun.start_time | date: dateFormat :timeZone }} {{timeZone}}, finished
+        <li *ngIf="!validationRun.is_a_copy">Started validation
+          on {{ validationRun.start_time | date: dateFormat :timeZone }} {{timeZone}}, finished
           on {{ validationRun.end_time | date: dateFormat :timeZone }} {{timeZone}}.
         </li>
         <li>Compared {{ configurations.length  }} datasets:
-          <ul>
+          <ol>
             <li *ngFor="let config of configurations; let ind = index">
-              <em style="font-weight: 600">Dataset {{ind + 1}}
-                {{validationConfigService.getInformationOnTheReference(config.is_spatial_reference,
-                  config.is_temporal_reference, config.is_scaling_reference)}}:
-              </em>
-
-              {{config.dataset}} ({{config.version}}, {{config.variable}})
-              [Filters:
-              <span *ngFor="let filter of config.filters"> {{filter}}; </span>
-              <span *ngFor="let paramFilter of config.parametrisedFilters; let indF = index">
-                              {{paramFilter}} {{config.parametrisedFiltersValues[indF]}}
-              </span>]
+<!--              <em>Dataset {{ind + 1}}: </em>-->
+              <span style="font-weight: 600">{{config.dataset}} ({{config.version}}, {{config.variable}})</span>
+              <em>{{validationConfigService.getInformationOnTheReference(config.is_spatial_reference,
+                config.is_temporal_reference, config.is_scaling_reference)}}
+              </em><br>
+              Filters:
+              <ul>
+                <li *ngFor="let filter of config.filters">{{filter}};</li>
+              </ul>
+              <ul>
+                <li *ngFor="let paramFilter of config.parametrisedFilters; let indF = index">
+                  {{paramFilter}}: {{config.parametrisedFiltersValues[indF].split(',').join(', ')}};
+                </li>
+              </ul>
             </li>
-          </ul>
+          </ol>
         <li
           *ngIf="validationRun.min_lat && validationRun.min_lon && validationRun.max_lat && validationRun.max_lon; else elseSpatial">
           Spatial filter bounding box: [{{ validationRun.min_lat }}, {{ validationRun.min_lon }}
@@ -158,9 +162,13 @@
         </li>
 
         <ng-template #elseScaling>
-          <li *ngIf="scalingMethods$|async as scalingMethods"> Scaling reference: {{ scalingMethods[validationRun.scaling_method] }}.</li>
+          <li *ngIf="scalingMethods$|async as scalingMethods"> Scaling
+            reference: {{ scalingMethods[validationRun.scaling_method] }}.
+          </li>
         </ng-template>
-        <li *ngIf="scalingMethods$|async as scalingMethods"> Scaling method: {{ scalingMethods[validationRun.scaling_method] }}.</li>
+        <li *ngIf="scalingMethods$|async as scalingMethods"> Scaling
+          method: {{ scalingMethods[validationRun.scaling_method] }}.
+        </li>
 
         <li *ngIf="!forComparison">Processing took {{ runTime }} minutes (wall time).</li>
 
@@ -168,7 +176,8 @@
         <ng-template #elseProgress>
           <li *ngIf="!forComparison" [ngClass]="{'alert-danger': errorRate > 0}">
             for {{errorRate * 100 | number: '.0'}}% ({{ validationRun.error_points }}
-            of {{ validationRun.total_points }}) of the processed locations (grid points) the validation metrics could not be calculated.
+            of {{ validationRun.total_points }}) of the processed locations (grid points) the validation metrics could
+            not be calculated.
           </li>
         </ng-template>
         <li *ngIf="!(isArchived$|async) && getCurrentUser() === validationRun.user  && !forComparison">
@@ -198,7 +207,8 @@
           <a target="_blank" href="{{getDoiPrefix()}}{{validationRun.doi }}">{{ validationRun.doi }}</a>.
         </li>
       </ul>
-      <qa-buttons *ngIf="!forComparison && (validationModel.validationRun|async) as validation" [validationList]="false" [validationRun]="validation" (doUpdate)="update($event)"></qa-buttons>
+      <qa-buttons *ngIf="!forComparison && (validationModel.validationRun|async) as validation" [validationList]="false"
+                  [validationRun]="validation" (doUpdate)="update($event)"></qa-buttons>
     </div>
   </p-panel>
 </main>
