some code refinement done

--- a/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
+++ b/UI/src/app/modules/validation-result/components/validationrun-row/validationrun-row.component.html
@@ -114,7 +114,9 @@
           {{config.dataset}},
           {{config.version}},
           {{config.variable}}
-          <span style="font-weight: 600">{{validationConfigService.getInformationOnTheReference(config.is_spatial_reference, config.is_temporal_reference, config.is_scaling_reference)}}</span>
+          <span style="font-weight: 600">
+            {{validationConfigService.getInformationOnTheReference(config.is_spatial_reference,
+            config.is_temporal_reference, config.is_scaling_reference)}}</span>
           <br>
         </span>
       </span>
