verification of the chosen value retrieved to properly set the reference on the dataset removal

--- a/UI/src/app/modules/validation-reference/components/validation-reference/validation-reference.component.html
+++ b/UI/src/app/modules/validation-reference/components/validation-reference/validation-reference.component.html
@@ -4,7 +4,7 @@
     <p-dropdown id="datasetSelector"
                 (onChange)="onDatasetChange()"
                 [options]="verifyOptions()|async"
-                [ngModel]="selectionModel$|async"
+                [ngModel]="verifyChosenValue()|async"
                 (ngModelChange)="selectionModel$.next($event)"
                 optionLabel="datasetModel.selectedDataset.pretty_name"
                 [style]="{'width': '100%'}">
