--- a/UI/src/app/modules/validation-reference/components/validation-reference/validation-reference.component.html
+++ b/UI/src/app/modules/validation-reference/components/validation-reference/validation-reference.component.html
@@ -27,5 +27,7 @@
       <label for="datasetSelector">Select dataset (version)</label>
     </span>
   </div>
+<!--  <span *ngIf="(verifyChosenValue()|async) as chosenValue">{{chosenValue.datasetModel.selectedDataset.pretty_name}}</span>-->
+
 </div>
 
