--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -20,8 +20,12 @@
           <p-accordion multiple="true">
 
             <p-accordionTab *ngFor="let item of validationModel.datasetConfigurations; let datasetIdx = index"
-                            [header]="(item.datasetModel.selectedDataset?.pretty_name)+' / '+(item.datasetModel.selectedVersion?.pretty_name)+' / '+(item.datasetModel.selectedVariable?.short_name)"
-                            [selected]="datasetIdx == validationModel.datasetConfigurations.length - 1">
+                            [header]="(item.datasetModel.selectedDataset?.pretty_name)+' / ' +
+                             ''+(item.datasetModel.selectedVersion?.pretty_name)+' / '+(item.datasetModel.selectedVariable?.short_name)
+                             + (validationConfigService.getInformationOnTheReference((item.spatialReference$|async), (item.temporalReference$|async), (item.scalingReference$|async)))"
+                            [selected]="datasetIdx == validationModel.datasetConfigurations.length - 1"
+                            [class]="{'highlighted': (item.highlighted$|async),
+                            'is-reference': ((item.spatialReference$|async) || (item.temporalReference$|async) || (item.scalingReference$|async))}">
 
               <qa-dataset *ngIf="validationModel.datasetConfigurations[datasetIdx].datasetModel.selectedDataset"
                           [selectionModel]="validationModel.datasetConfigurations[datasetIdx].datasetModel"
@@ -38,20 +42,32 @@
               </ng-container>
 
               <qa-threshold-filter *ngIf="validationModel.datasetConfigurations[datasetIdx].smosRfiFilter$|async"
-                [datasetModel]="validationModel.datasetConfigurations[datasetIdx].datasetModel"
-                [filterModel$]="validationModel.datasetConfigurations[datasetIdx].smosRfiFilter$"
-                [minThreshold]="0." [increment]="0.05" maxThreshold="1." [units]="' [-]'">
+                                   [datasetModel]="validationModel.datasetConfigurations[datasetIdx].datasetModel"
+                                   [filterModel$]="validationModel.datasetConfigurations[datasetIdx].smosRfiFilter$"
+                                   [minThreshold]="0." [increment]="0.05" maxThreshold="1." [units]="' [-]'">
               </qa-threshold-filter>
 
               <qa-threshold-filter *ngIf="validationModel.datasetConfigurations[datasetIdx].smosChi2Filter$|async"
                                    [datasetModel]="validationModel.datasetConfigurations[datasetIdx].datasetModel"
                                    [filterModel$]="validationModel.datasetConfigurations[datasetIdx].smosChi2Filter$"
                                    [minThreshold]="0." [increment]="0.05" maxThreshold="1." [units]="' [-]'">
-            </qa-threshold-filter>
+              </qa-threshold-filter>
+              <div *ngIf="validationModel.datasetConfigurations[datasetIdx].ismnNetworkFilter$|async">
+                <qa-ismn-network-filter
+
+                  [datasetModel]="validationModel.datasetConfigurations[datasetIdx].datasetModel"
+                  [filterModel$]="validationModel.datasetConfigurations[datasetIdx].ismnNetworkFilter$"></qa-ismn-network-filter>
+              </div>
+              <div *ngIf="validationModel.datasetConfigurations[datasetIdx].ismnDepthFilter$|async">
+                <qa-ismn-depth-filter
+                  [datasetModel]="validationModel.datasetConfigurations[datasetIdx].datasetModel"
+                  [filterModel$]="validationModel.datasetConfigurations[datasetIdx].ismnDepthFilter$">
+                </qa-ismn-depth-filter>
+              </div>
 
               <div style="width: 100%;text-align: right">
                 <button pButton type="button"
-                        [disabled]="validationModel.datasetConfigurations.length < 2"
+                        [disabled]="validationModel.datasetConfigurations.length < 3"
                         (click)="removeDataset(validationModel.datasetConfigurations[datasetIdx])"
                         label="Remove dataset"
                         icon="pi pi-trash"
@@ -75,8 +91,9 @@
         </p-panel>
       </div>
 
-      <!--  reference column-->
+
       <div class="p-md-5 p-col-10">
+        <!--  reference column-->
         <p-panel header="Reference" [toggleable]="true" class="validation-small-row">
           <ng-template pTemplate="icons">
             <label class="p-panel-header-icon"
@@ -86,52 +103,43 @@
             </label>
           </ng-template>
 
-          <div
-            *ngIf="validationModel.referenceConfigurations.length>0 && validationModel.referenceConfigurations[0].datasetModel.selectedDataset">
-            <qa-dataset
-              [reference]="true"
-              [removable]="false"
-              [selectionModel]="validationModel.referenceConfigurations[0].datasetModel"
-              (changeDataset)="onReferenceChange()"></qa-dataset>
-
-            <ng-container *ngFor="let filter of validationModel.referenceConfigurations[0].basicFilters; let i = index">
-              <qa-basic-filter *ngIf="filter.filterDto.id != smosThresholdFilter"
-                [ngClass]="isIncluded(filter.filterDto.id, validationModel.referenceConfigurations[0].basicFilters) == true ? 'ml-1' : ''"
-                [isIncluded]="isIncluded(filter.filterDto.id, validationModel.referenceConfigurations[0].basicFilters)"
-                [filterModel]="filter"
-                (onExcludeMutual)="this.excludeFilter($event, validationModel.referenceConfigurations[0].basicFilters)"
-                (onIncludeMutual)="includeFilter($event, validationModel.referenceConfigurations[0].basicFilters, filter.enabled)">
-              </qa-basic-filter>
-            </ng-container>
-
-            <qa-threshold-filter *ngIf="validationModel.referenceConfigurations[0].smosRfiFilter$|async"
-               [datasetModel]="validationModel.referenceConfigurations[0].datasetModel"
-               [filterModel$]="validationModel.referenceConfigurations[0].smosRfiFilter$"
-               [minThreshold]="0." [increment]="0.05" maxThreshold="1." [units]="' [-]'">>
-            </qa-threshold-filter>
-
-            <qa-threshold-filter *ngIf="validationModel.referenceConfigurations[0].smosChi2Filter$|async"
-                                 [datasetModel]="validationModel.referenceConfigurations[0].datasetModel"
-                                 [filterModel$]="validationModel.referenceConfigurations[0].smosChi2Filter$"
-                                 [minThreshold]="0." [increment]="0.05" maxThreshold="1." [units]="' [-]'">>
-            </qa-threshold-filter>
-
-            <div *ngIf="validationModel.referenceConfigurations[0].ismnNetworkFilter$|async">
-              <qa-ismn-network-filter
-
-                [datasetModel]="validationModel.referenceConfigurations[0].datasetModel"
-                [filterModel$]="validationModel.referenceConfigurations[0].ismnNetworkFilter$"></qa-ismn-network-filter>
-            </div>
-            <div *ngIf="validationModel.referenceConfigurations[0].ismnDepthFilter$|async">
-              <qa-ismn-depth-filter
-                [datasetModel]="validationModel.referenceConfigurations[0].datasetModel"
-                [filterModel$]="validationModel.referenceConfigurations[0].ismnDepthFilter$">
-              </qa-ismn-depth-filter>
-            </div>
-
+          <!--             spatial reference-->
+          <div class="p-pt-2">
+            <label for="spatial-reference" class="p-mb-4">Spatial reference:</label>
+            <qa-validation-reference
+              id="spatial-reference"
+              #spatialReference
+              [validationModel]="validationModel"
+              [referenceType]="'spatialReference$'"
+              (hoverOverDataset)="onHoverOverReferenceDataset($event)"></qa-validation-reference>
           </div>
 
+          <!--             temporal reference-->
+          <div>
+            <label for="temporal-reference" class="p-mb-4">Temporal reference:</label>
+            <qa-validation-reference
+              id="temporal-reference"
+              #temporalReference
+              [validationModel]="validationModel"
+              [referenceType]="'temporalReference$'"
+              (hoverOverDataset)="onHoverOverReferenceDataset($event)"></qa-validation-reference>
+          </div>
+
+
         </p-panel>
+
+
+        <!--      Scaling-->
+<!--        <p-panel header="Reference" [toggleable]="true" class="validation-small-row">-->
+<!--          <div class="p-col-10">-->
+            <qa-scaling
+              [validationModel]="validationModel"
+              (hoverOverDataset)="onHoverOverReferenceDataset($event)"
+            ></qa-scaling>
+<!--          </div>-->
+<!--        </p-panel>-->
+
+
       </div>
 
       <!--      Map-->
@@ -149,7 +157,6 @@
       <div class="p-col-10">
         <qa-spatial-subset [subsetModel]="validationModel.spatialSubsetModel"></qa-spatial-subset>
       </div>
-
 
 
       <p-panel header="Temporal Subsetting" [toggleable]="true" class="validation-row p-col-10">
@@ -179,16 +186,15 @@
       </div>
 
 
-
       <!--      Anomalies-->
       <div class="p-col-10">
         <qa-anomalies [anomaliesModel]="validationModel.anomalies"></qa-anomalies>
       </div>
 
-      <!--      Scaling-->
-      <div class="p-col-10">
-        <qa-scaling [validationModel]="validationModel"></qa-scaling>
-      </div>
+      <!--      &lt;!&ndash;      Scaling&ndash;&gt;-->
+      <!--      <div class="p-col-10">-->
+      <!--        <qa-scaling [validationModel]="validationModel"></qa-scaling>-->
+      <!--      </div>-->
 
       <!-- Name -->
       <div class="p-col-10">
