--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -1049,7 +1049,7 @@ p-inputswitch.ng-dirty.ng-invalid > .p-inputswitch {
   border-top-left-radius: 0;
 }
 
-#method .p-dropdown, #scalingMethod .p-dropdown, #scalingTo .p-dropdown, #orderSelector .p-dropdown{
+#method .p-dropdown, #orderSelector .p-dropdown{
   border-left: none;
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
@@ -3717,7 +3717,8 @@ div.carousel-caption{
   box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
 }
 
-.p-accordion .p-accordion-header:not(.p-highlight):not(.p-disabled):hover .p-accordion-header-link {
+.p-accordion p-accordiontab .p-accordion-header:not(.p-highlight):not(.p-disabled):hover .p-accordion-header-link,
+.p-accordion p-accordiontab.highlighted .p-accordion-header:not(.p-highlight):not(.p-disabled) .p-accordion-header-link{
   background: #EFEFEF;
   border-color: #dee2e6;
   color: #495057;
@@ -3733,7 +3734,8 @@ div.carousel-caption{
   border-bottom-left-radius: 0;
 }
 
-.p-accordion .p-accordion-header:not(.p-disabled).p-highlight:hover .p-accordion-header-link {
+.p-accordion p-accordiontab .p-accordion-header:not(.p-disabled).p-highlight:hover .p-accordion-header-link,
+.p-accordion p-accordiontab.highlighted .p-accordion-header:not(.p-disabled).p-highlight .p-accordion-header-link{
   border-color: #dee2e6;
   background: #EFEFEF;
   color: #495057;
@@ -3786,6 +3788,11 @@ div.carousel-caption{
 .p-accordion p-accordiontab:last-child .p-accordion-content {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
+}
+
+.p-accordion p-accordiontab.is-reference .p-accordion-header:not(.p-highlight):not(.p-disabled) .p-accordion-header-link,
+.p-accordion p-accordiontab.is-reference .p-accordion-header:not(.p-disabled).p-highlight .p-accordion-header-link{
+  color: #004085;
 }
 
 .p-card {
