dimension names removed from the frontend

--- a/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-data-row/user-data-row.component.html
@@ -119,113 +119,8 @@
         </button>
       </div>
     </div>
-    <!-- coordinates -->
+    <!-- coordinates - we don't show coordinates anymore, but I'll leave this space here-->
     <div class="p-col">
-      <div><strong>Coordinates: </strong>
-      </div>
-      <div>
-        <span
-          *ngIf="!(editLatName.opened)"
-          (click)="toggle(latFieldName, true)"
-          style="cursor: pointer"
-          pTooltip="You can choose another name by clicking here. Please note, if the chosen variable name is incorrect, data validation won't be possible.">
-          Latitude: <b>{{latitudeName$|async}} </b>
-          <span class="pi pi-question-circle small-edit-icon"></span>
-        </span>
-        <div *ngIf="editLatName.opened">
-          <label for="latitude-dropdown">Latitude: </label>
-          <p-dropdown
-            id="latitude-dropdown"
-            class="form-field"
-            [options]="(userDataset.all_variables)"
-            [ngModel]="latitudeName$|async"
-            (ngModelChange)="updateMetadata(latFieldName, $event, userDataset.id)"
-            [style]="{'width':'6rem', 'height': '2rem'}"
-            optionLabel="name"
-            optionValue="name"
-            placeholder="Choose"
-            editable="true"
-            ngDefaultControl>
-          </p-dropdown>
-          <button
-            pButton
-            type="button"
-            icon="pi pi-ban"
-            [ngClass]="{'btn-action cancel_black_btn': true}"
-            pTooltip="Cancel"
-            (click)="toggle(latFieldName,false)">
-          </button>
-        </div>
-      </div>
-      <div>
-        <span
-          *ngIf="!(editLonName.opened)"
-          (click)="toggle(lonFieldName, true)"
-          style="cursor: pointer"
-          pTooltip="You can choose another name by clicking here. Please note, if the chosen variable name is incorrect, data validation won't be possible.">
-          Longitude: <b>{{longitudeName$|async}} </b>
-          <span class="pi pi-question-circle small-edit-icon"></span>
-        </span>
-        <div *ngIf="editLonName.opened">
-          <label for="longitude-dropdown">Longitude: </label>
-          <p-dropdown
-            id="longitude-dropdown"
-            class="form-field"
-            [options]="(userDataset.all_variables)"
-            [ngModel]="longitudeName$|async"
-            (ngModelChange)="updateMetadata(lonFieldName, $event, userDataset.id)"
-            [style]="{'width':'6rem', 'height': '2rem'}"
-            optionLabel="name"
-            optionValue="name"
-            placeholder="Choose"
-            editable="true"
-            ngDefaultControl>
-          </p-dropdown>
-          <button
-            pButton
-            type="button"
-            icon="pi pi-ban"
-            [ngClass]="{'btn-action cancel_black_btn': true}"
-            pTooltip="Cancel"
-            (click)="toggle(lonFieldName,false)">
-          </button>
-        </div>
-
-      </div>
-      <div>
-        <span
-          *ngIf="!(editTimeName.opened)"
-          (click)="toggle(timeFiledName, true)"
-          style="cursor: pointer"
-          pTooltip="You can choose another name by clicking here. Please note, if the chosen variable name is incorrect, data validation won't be possible.">
-          Time: <b>{{timeName$|async}} </b>
-          <span class="pi pi-question-circle small-edit-icon"></span>
-        </span>
-        <div *ngIf="editTimeName.opened">
-          <label for="time-dropdown">Time: </label>
-          <p-dropdown
-            id="time-dropdown"
-            class="form-field"
-            [options]="(userDataset.all_variables)"
-            [ngModel]="timeName$|async"
-            (ngModelChange)="updateMetadata(timeFiledName, $event, userDataset.id)"
-            [style]="{'width':'6rem', 'height': '2rem'}"
-            optionLabel="name"
-            optionValue="name"
-            placeholder="Choose"
-            editable="true"
-            ngDefaultControl>
-          </p-dropdown>
-          <button
-            pButton
-            type="button"
-            icon="pi pi-ban"
-            [ngClass]="{'btn-action cancel_black_btn': true}"
-            pTooltip="Cancel"
-            (click)="toggle(timeFiledName,false)">
-          </button>
-        </div>
-      </div>
 
     </div>
     <!-- actions   -->
