--- a/UI/src/app/modules/dataset/components/dataset/dataset.component.html
+++ b/UI/src/app/modules/dataset/components/dataset/dataset.component.html
@@ -3,7 +3,17 @@
     <span class="p-float-label p-mb-4 p-mt-3">
     <p-dropdown id="datasetSelector" (onChange)="onDatasetChange()" [options]="(datasets$|async)"
                 [(ngModel)]="selectionModel.selectedDataset"
-                optionLabel="pretty_name" [style]="{'width': '100%'}"></p-dropdown>
+                optionLabel="pretty_name" [style]="{'width': '100%'}">
+      <ng-template let-item pTemplate="item">
+          <span>
+            <span>{{item.pretty_name}} <em>{{item.user ? "  (user data)" : ''}}</em> </span>
+          </span>
+      </ng-template>
+      <ng-template let-item pTemplate="selectedItem">
+         <span>{{item.pretty_name}} <em>{{item.user ? "  (user data)" : ''}}</em> </span>
+      </ng-template>
+    </p-dropdown>
+
       <label for="datasetSelector">Dataset</label>
     </span>
 
