blocking publishing for validation containing user dataset added

--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -220,7 +220,7 @@
       </button>
     </ng-template>
 
-    <button *ngIf="validationRun.output_file"
+    <button *ngIf="validationRun.output_file && !validationRun.contains_user_data"
             pButton
             type="button"
             icon="pi pi-book"
