small frontend improvements done: - newest ISMN version set by default; - information on the my-dataset page has been updated

--- a/UI/src/app/pages/my-datasets/my-datasets.component.html
+++ b/UI/src/app/pages/my-datasets/my-datasets.component.html
@@ -23,7 +23,7 @@
         <div *ngIf="readMore">
           <ul>
             <li>
-              The <b>variable</b> and <b>coordinates</b> names were retrieved from the file. <br>
+              The soil moisture <b>variable</b> names were retrieved from the file. <br>
               If they are improper or you want to use another one, <b>click</b> on the name and
               choose a different one. <br>
               Please note, if the chosen name is incorrect, data validation will not be possible.
