--- a/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.html
+++ b/UI/src/app/modules/user-datasets/components/user-file-upload/user-file-upload.component.html
@@ -35,7 +35,7 @@
 
 <p-dialog id="user-data-form" header="Upload your own data" [(visible)]="dialogVisible">
   <div class="p-pb-3 p-pl-0">You can upload your own data using this form. Please follow this file <a target="_blank"
-                                                                                                      [routerLink]="['/help', {pageSec: 'file-standard'}]">standard</a>
+                                                                                                      [routerLink]="['/user-data-guidelines']">standard</a>
   </div>
   <div class="p-grid" style="display: flex">
 
