Add user data requirements text

--- a/UI/src/app/pages/help/help.component.html
+++ b/UI/src/app/pages/help/help.component.html
@@ -609,11 +609,9 @@
   </p>
 
   <a id="file-standard"></a>
-  <h1 class="h3 mb-3 font-weight-normal">User Data File</h1>
+  <h1 class="h3 mb-3 font-weight-normal">User Data Upload Requirements</h1>
+    Please see the page on user data requirements.
 
-  <p>
-  Here we will provide information about the file standard for our users.
-  </p>
   <qa-scroll-to-top></qa-scroll-to-top>
 </main>
 
